Retirada dos campos CPF e DataNascimento do projeto
