# api/app/serializers/cliente_serializer.rb
@@ -1,7 +1,3 @@
 class ClienteSerializer < ActiveModel::Serializer
-  attributes :id, :nome, :email, :cpf, :data_nascimento
-
-  def data_nascimento
-    object.data_nascimento.strftime("%d/%m/%Y")
-  end
+  attributes :id, :nome, :email
 end
